--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-container">
         <h2>Student Information</h2>
-        <form form id="studentForm" action="https://script.google.com/a/macros/kongu.edu/s/AKfycbxw3cK_eZ7GEnI55juynEJWY3Bw-ZcIe7fBL4dZQ0IvifzV37Y50LckqrfKdAMLDlYhbQ/exec" method="POST">
+        <form form id="studentForm" action="https://script.google.com/macros/s/AKfycbxw3cK_eZ7GEnI55juynEJWY3Bw-ZcIe7fBL4dZQ0IvifzV37Y50LckqrfKdAMLDlYhbQ/exec" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="roll">Roll Number:</label>
@@ -24,7 +24,7 @@
             event.preventDefault(); // Prevent default form submission
         
             const formData = new FormData(event.target);
-            const response = await fetch('https://script.google.com/a/macros/kongu.edu/s/AKfycbxw3cK_eZ7GEnI55juynEJWY3Bw-ZcIe7fBL4dZQ0IvifzV37Y50LckqrfKdAMLDlYhbQ/exec', {
+            const response = await fetch('https://script.google.com/macros/s/AKfycbxw3cK_eZ7GEnI55juynEJWY3Bw-ZcIe7fBL4dZQ0IvifzV37Y50LckqrfKdAMLDlYhbQ/exec', {
                 method: 'POST',
                 body: formData,
                 mode: 'no-cors' // Bypass CORS restrictions
