--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Form</title>
+    <script>
+        function resetForm() {
+            // Reset the form fields
+            document.getElementById("myForm").reset();
+        }
+    </script>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
