--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="form-container">
         <h2>Student Information</h2>
-        <form form id="studentForm" action="https://script.google.com/macros/s/AKfycbwHSdTjDfVGIYdVcv23bIH_NsnImMy-DAHHl0-uPadESTpae-DFyRBwGENMHtSvNxeU/exec" method="POST">
+        <form form id="studentForm" action="https://script.google.com/macros/s/AKfycbwHSdTjDfVGIYdVcv23bIH_NsnImMy-DAHHl0-uPadESTpae-DFyRBwGENMHtSvNxeU/exec" method="POST" onsubmit="resetForm()>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="roll">Roll Number:</label>
