--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         function resetForm() {
             // Reset the form fields
-            document.getElementById("myForm").reset();
+            document.getElementById("studentForm").reset();
         }
     </script>
     <link rel="stylesheet" href="home.css">
